Respect status from LxdContainerCreatedSignal

The status can indicate various failures. The old code assumed the
signal always indicates success. New ConciergeClientResult enums
indicate the important results.

Also added a CrostiniManagerResterTest, AbortOnContainerCreatedError which
sets fake_cicerone_client_ to respond with an UNKNOWN error and then
ensures that both the callback was called and the error was passed
through to the callback (after being converted from a
LxdContainerCreatedSignal_Status to a ConciergeClientResult.

Bug: 891805
Change-Id: I0f0af4fa5aea4da6fd2de1439085cef88cd7b2f2
Reviewed-on: https://chromium-review.googlesource.com/c/1266415
Commit-Queue: Josh Pratt <jopra@chromium.org>
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Reviewed-by: Nicholas Verne <nverne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598199}
Former-commit-id: ea3f2940e366fba2548d5108d22bed412d58d4d9